--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,14 @@
 
 :root{
     --primary-color:  #059669;
+--dark-grey: #6b7280;
+--off-white: #f1f5f9;
 }
 
 
 body{
     font-family: 'Noto Sans', sans-serif;
+    margin: 0rem;
 }
 
 /**container**/
@@ -25,6 +28,8 @@ margin: auto;
  .link {
     text-decoration: none;
     padding: 0.5rem 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 
@@ -37,4 +42,83 @@ margin: auto;
 color: var(--primary-color);
 border-radius: 0.5rem;
 border: 1px solid var(--primary-color);
+}
+hr {
+     margin: 2rem 0rem;
+}
+/** list **/
+.non-bullet{
+    list-style: none;
+}
+.list-item-inline{
+    display: inline;
+    padding: 0rem 0.5rem
+}
+/**nav**/
+.navigation{
+ background-color: var(--primary-color);
+ color: white;
+ padding: 1rem;
+ border-bottom-left-radius: 1rem;
+}
+.navigation .nav-brand{
+    font-weight: bold;
+    font-size: 1.1rem;
+}
+.navigation .nav-pills {
+    text-align:right;
+
+}
+.navigation .link{
+    color: white;
+    
+    
+}
+.navigation .link-active{
+    font-weight: bold;
+}
+/**header**/
+.hero{
+    padding: 2rem;
+}
+.hero .hero-img{
+    max-width: 350px;
+    display: block;
+    margin: auto;
+
+}
+.hero .hero-heading{
+    font-size: 2rem;
+    padding-top: 1rem;
+    color: var(--dark-grey);
+    text-align: center;
+}
+.hero .heading-inverted{
+    color: var(--primary-color);
+}
+/**sections**/
+.section{
+    padding: 2rem;
+}
+.section h1{
+text-align: center;
+
+}
+.ow{
+    background-color: var(--off-white);
+}
+
+footer{
+    background-color: var(--primary-color);
+padding: 2rem 1rem;
+text-align: center;
+color:white;
+border-top-right-radius: 1rem;
+}
+.footer .link{
+    color: white;
+}
+.footer .footer-header{
+    font-weight:bold;
+    font-size:large;
 }
